Beta 3 (Released TBD):
Mane changes:

Bug Fixes:

Balance Tweaks:

Misc. Changes:

Beta 2 (Released 03-07-21):
Mane changes:
- Added an additional boost when rocket/grenade jumping.
- Added proper bindings for the Gatling Gun and the Railgun.
- Added a timer for games with a time limit.
- Enabled most server movement variables. The server host can change most of these in the server settings.
- Increased sv_airaccelerate from 10 to 150. This allows for easier air control when bunnyhopping.
- Added a randomizer mode!
	- Server hosts can change what weapons players spawn with the weapons.txt in the scripts folder. Please note that this will also change the amount of weapons you can spawn with when you use impulse 101.
- Your Railgun beam's color will now change based on your primary player color.
- Reverted back to the original Half-Life 2 Deathmatch spawn algorithm, while retaining support for Counter-Strike Source and Day of Defeat Source spawnpoints.
- Added support for TF2 spawnpoints.
- Added a difficulty selector for bots.
- Added a keybind to quickly switch into spectator mode.
	- Default bind: v
- Added a proper download directory.

Bug Fixes:
- Fixed a bug where the Railgun doesn't display effects when hitting a player.
- Fixed an issue where you couldn't pick up the Gatling Gun.
- Fixed a bug where the Railgun doesn't unzoom when switching weapons.
- Fixed a bug where Spectators team name doesn't show up in the scoreboard during Free-For-All Arena matches.
- Fixed a crash that would occur if you were loading into a map without a navigation mesh with bots.
- Fixed a bug where some weapons would play a lowering animation when switching weapons (rather than quickly switching).

Balance Tweaks:
- Limited how much ammo you can carry:
	- You can only carry up to 5 Combine Balls at once for the CBL-V2.
	- You can only carry up to 225 rounds at once for the Pistol.
	- You can only carry up to 225 rounds at once for the SMG.