@@ -68,6 +68,7 @@ $Project "Server (PoneDM)"
 			{
 				$File	"$SRCDIR\game\shared\ponedm\weapon_gatling.cpp"
 				$File	"$SRCDIR\game\shared\ponedm\weapon_railgun.cpp"
+				$File	"$SRCDIR\game\shared\ponedm\weapon_railgun.h"
 			}
 			
 			$Folder "Bots"
